; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/qla4xxx/extr_ql4_os.c_qla4xxx_fail_session.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/qla4xxx/extr_ql4_os.c_qla4xxx_fail_session.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_cls_session = type { %struct.iscsi_session* }
%struct.iscsi_session = type { %struct.ddb_entry* }
%struct.ddb_entry = type { i64, i32, i32 }

@DDB_DS_SESSION_FAILED = common dso_local global i32 0, align 4
@FLASH_DDB = common dso_local global i64 0, align 8
@ISCSI_ERR_CONN_FAILED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iscsi_cls_session*)* @qla4xxx_fail_session to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qla4xxx_fail_session(%struct.iscsi_cls_session* %0) #0 {
  %2 = alloca %struct.iscsi_cls_session*, align 8
  %3 = alloca %struct.iscsi_session*, align 8
  %4 = alloca %struct.ddb_entry*, align 8
  store %struct.iscsi_cls_session* %0, %struct.iscsi_cls_session** %2, align 8
  %5 = load %struct.iscsi_cls_session*, %struct.iscsi_cls_session** %2, align 8
  %6 = getelementptr inbounds %struct.iscsi_cls_session, %struct.iscsi_cls_session* %5, i32 0, i32 0
  %7 = load %struct.iscsi_session*, %struct.iscsi_session** %6, align 8
  store %struct.iscsi_session* %7, %struct.iscsi_session** %3, align 8
  %8 = load %struct.iscsi_session*, %struct.iscsi_session** %3, align 8
  %9 = getelementptr inbounds %struct.iscsi_session, %struct.iscsi_session* %8, i32 0, i32 0
  %10 = load %struct.ddb_entry*, %struct.ddb_entry** %9, align 8
  store %struct.ddb_entry* %10, %struct.ddb_entry** %4, align 8
  %11 = load i32, i32* @DDB_DS_SESSION_FAILED, align 4
  %12 = load %struct.ddb_entry*, %struct.ddb_entry** %4, align 8
  %13 = getelementptr inbounds %struct.ddb_entry, %struct.ddb_entry* %12, i32 0, i32 2
  store i32 %11, i32* %13, align 4
  %14 = load %struct.ddb_entry*, %struct.ddb_entry** %4, align 8
  %15 = getelementptr inbounds %struct.ddb_entry, %struct.ddb_entry* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @FLASH_DDB, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %1
  %20 = load %struct.ddb_entry*, %struct.ddb_entry** %4, align 8
  %21 = getelementptr inbounds %struct.ddb_entry, %struct.ddb_entry* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @iscsi_block_session(i32 %22)
  br label %30

24:                                               ; preds = %1
  %25 = load %struct.iscsi_cls_session*, %struct.iscsi_cls_session** %2, align 8
  %26 = getelementptr inbounds %struct.iscsi_cls_session, %struct.iscsi_cls_session* %25, i32 0, i32 0
  %27 = load %struct.iscsi_session*, %struct.iscsi_session** %26, align 8
  %28 = load i32, i32* @ISCSI_ERR_CONN_FAILED, align 4
  %29 = call i32 @iscsi_session_failure(%struct.iscsi_session* %27, i32 %28)
  br label %30

30:                                               ; preds = %24, %19
  ret void
}

declare dso_local i32 @iscsi_block_session(i32) #1

declare dso_local i32 @iscsi_session_failure(%struct.iscsi_session*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
